cambiando envio de categorias